# chip-tycoon

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  README_quickstart.md  clippy.toml  justfile  pnpm-workspace.yaml  rustfmt.toml
.github/workflows/: ci.yml  release-windows.yml  release.yml
apps/cli/: Cargo.toml  build.rs
apps/cli/src/: main.rs
apps/game-frontend/: Cargo.toml
apps/game-frontend/src/: main.rs
apps/mgmt-ui/: README.md
apps/mgmt-ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/mgmt-ui/src-tauri/src/: embedded.rs  main.rs
apps/mgmt-ui/web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
apps/mgmt-ui/web/src/: App.test.tsx  App.tsx  api.ts  i18n.ts  main.tsx  store.ts  styles.css
apps/mgmt-ui/web/src/__tests__/: app.test.tsx  i18n.test.ts  ipc.test.tsx
apps/mgmt-ui/web/src/tests/: setup.ts
apps/mgmt-ui/web/src/tests/mocks/: ipc.ts
assets/data/: ai_defaults.yaml  baseline_1990.yaml  tech_era_1990s.yaml
assets/mods/evt_1991_foundry_bump/: metadata.yaml
assets/mods/evt_1993_yield_hiccup/: metadata.yaml  script.rhai
assets/mods/evt_1998_chem_shortage/: script.rhai
assets/mods/example_mod/: script.rhai
assets/scenarios/: campaign_1990s.yaml
crates/data-pipeline/: Cargo.toml
crates/data-pipeline/src/: main.rs
crates/modkit/: Cargo.toml
crates/modkit/src/: lib.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs
crates/sim-ai/: Cargo.toml
crates/sim-ai/benches/: ai_bench.rs
crates/sim-ai/src/: lib.rs
crates/sim-core/: Cargo.toml
crates/sim-core/src/: lib.rs
crates/sim-econ/: Cargo.toml
crates/sim-econ/src/: lib.rs
crates/sim-runtime/: Cargo.toml
crates/sim-runtime/benches/: sim_bench.rs
crates/sim-runtime/src/: lib.rs
docs/: RELEASE_CHECKLIST.md  release-notes-0.1.0.md  user-guide.md
migrations/sqlite/: 0001_init.sql  0002_core_tables.sql  0003_capacity_tapeout.sql  0004_save_status.sql
saves/: main.db  main.db-journal
scripts/windows/: build-ui.ps1  install-tauri-prereqs.ps1
telemetry/: run_20250902_124749.parquet  run_20250902_131800.parquet
