[package]
name = "cli"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
sim-core = { path = "../../crates/sim-core" }
sim-runtime = { path = "../../crates/sim-runtime" }
persistence = { path = "../../crates/persistence" }
serde = { workspace = true }
serde_yaml = "0.9"
