[package]
name = "modkit"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
rhai = { workspace = true }
tracing = { workspace = true }
sim-core = { path = "../sim-core" }
serde_yaml = "0.9"
chrono = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true }
