[package]
name = "persistence"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
sim-core = { path = "../sim-core" }

[dev-dependencies]
proptest = { workspace = true }
