[package]
name = "persistence"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
sim-core = { path = "../sim-core" }
chrono = { workspace = true }
rust_decimal = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
parquet = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
