[package]
name = "sim-ai"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
sim-core = { path = "../sim-core" }
sim-econ = { path = "../sim-econ" }
serde = { workspace = true }
serde_yaml = "0.9"
rust_decimal = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
