[package]
name = "sim-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
