[package]
name = "sim-runtime"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tracing = { workspace = true }
bevy_ecs = { workspace = true }
sim-core = { path = "../sim-core" }
sim-econ = { path = "../sim-econ" }
sim-ai = { path = "../sim-ai" }
chrono = { workspace = true }
rust_decimal = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
persistence = { path = "../persistence" }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
