[package]
name = "mgmt-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", default-features = false, features = ["macos-private-api"] }
sim-runtime = { path = "../../crates/sim-runtime" }
sim-core = { path = "../../crates/sim-core" }
once_cell = "1"

[build-dependencies]
tauri-build = { version = "2" }

