[package]
name = "mgmt-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", default-features = false, features = ["macos-private-api"] }
sim-runtime = { path = "../../crates/sim-runtime" }
sim-core = { path = "../../crates/sim-core" }
persistence = { path = "../../crates/persistence" }
once_cell = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde_yaml = "0.9"
schemars = "0.8"
jsonschema = "0.17"
rust_decimal = { version = "1", features = ["serde"] }

[build-dependencies]
tauri-build = { version = "2" }
