[package]
name = "mgmt-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8", default-features = false , features = ["wry"] }
sim-runtime = { path = "../../../crates/sim-runtime" }
sim-core = { path = "../../../crates/sim-core" }
persistence = { path = "../../../crates/persistence" }
sim-ai = { path = "../../../crates/sim-ai" }
once_cell = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde_yaml = "0.9"
schemars = "0.8"
jsonschema = "0.17"
rust_decimal = { version = "1", features = ["serde"] }
tracing = "0.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
base64 = "0.22"
ico = "0.4"

# Note: this crate is built standalone by Tauri; do not mark it as a workspace root.
